test/1.4/errors/T_EBADCONDSTMT.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

template empty {}

param yes = true;
#if (yes) {
    /// ERROR EBADCONDSTMT
    param p = 3;
    /// ERROR EBADCONDSTMT
    typedef int i_t;
} #else {
    /// ERROR EBADCONDSTMT
    template t {
    }

    /// ERROR EBADCONDSTMT
    extern typedef int i_t;

    /// ERROR EBADCONDSTMT
    is empty;
}

#if (true) {
    // no error
    param p = 3;
    extern typedef int i2_t;
}
#if (false) {
    // no error
    is empty;
    param p = 3;
}
#if (dml_1_2) {
    // no error
    is empty;
    param p = 3;
}

group g {
    #if (true) {
        /// ERROR EBADCONDSTMT
        param p = 5;
        /// ERROR EBADCONDSTMT
        is empty;
    }
}
